ext {
    jupiterVersion = '5.9.3' // determined by spring-boot-dependencies
    mockitoVersion = '5.3.1' // determined by spring-boot-dependencies
    assertJVersion = '3.24.2'
}

subprojects { project ->

    apply plugin: 'java'

    repositories {
        mavenCentral()
    }

    dependencies {
        testImplementation("org.junit.jupiter:junit-jupiter:$jupiterVersion")
        testImplementation("org.assertj:assertj-core:$assertJVersion")
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    java {
        sourceCompatibility = JavaVersion.VERSION_17
        targetCompatibility = JavaVersion.VERSION_17
    }

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
    }

    test {
        jvmArgs '--add-opens', 'java.base/java.util=ALL-UNNAMED'
        jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
        useJUnitPlatform()
    }

    compileTestJava {
        options.compilerArgs += '-parameters'
    }
}

wrapper {
    gradleVersion = '8.3'
}

